2003-05-24  Jeffrey Stedfast  <fejj@ximian.com>

	* libgnome/gnome-program.c (gnome_program_preinit): Do like what
	the comment says and really copy the argv, otherwise the
	g_strfreev() in gnome_program_finalize() will free memory we don't
	own.

2003-05-18  Kjartan Maraas  <kmaraas@gnome.org>

	* schemas/Makefile.am: Make this honor --disable-schemas-install
	Patch from Julio Merino.
	
2003-05-12  Hidetoshi Tajima <hidetoshi.tajima@sun.com>

	* libgnome/gnome-init.c (libgnome_module_info_get): 
	call bindtextdomain and bind_textdomain_codeset() earlier
	than the current, fixing bug #99224.
	
2003-05-05  Christian Rose  <menthos@menthos.com>

	* configure.in: Added sr and sr@Latn to ALL_LINGUAS.

2003-05-04  Taneem Ahmed  <taneem@eyetap.org>

	* configure.in: Added "bn" in ALL_LINGUAS

2003-05-03  Kjartan Maraas  <kmaraas@gnome.org>

	* help-converters/man/gnome-man2html.c: Fix for
	manual pages that have non numerical filetypes like
	open.3pm. Fixes bug #101440. Patch from Roderich Schupp.

2003-05-01  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-i18n.c: Pull up fix for
	bug #106180 from HEAD.

2003-05-01  Kjartan Maraas  <kmaraas@gnome.org>

	* help-converters/info/main.c: (file_exists):
	* help-converters/man/gnome-man2html.c: (main):
	Two patches from John Fleck to fix crashes when
	feeding directories to the help converters. Fixes
	bug #104056.

2003-04-29  Kjartan Maraas <kmaraas@gnome.org>

	*  help-converters/man/gnome-man2html2.c:
	*  help-converters/man/Makefile.am: Pull up fixes from
	HEAD.

2003-04-11  Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>

	*  libgnome/gnome-url.c (gnome_url_show_with_env):
	Make sure url substitution takes place for customized web
	browser command. Fixes bug#108909.

	Reviewed by: Mark McLoughlin <mark@skynet.ie>

2003-03-21  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "ml" in ALL_LINGUAS

2003-03-16  Andras Timar  <timar@gnome.hu>
