@@ -1,3 +1,8 @@
+2003-06-24  Anders Carlsson  <andersca@codefactory.se>
+
+	* help-converters/man/gnome-man2html.c: Use glib versions of
+	string functions. (Fixes #81355, Morten Welinder.)
+
 2003-05-24  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* libgnome/gnome-program.c (gnome_program_preinit): Do like what
